syntax = "proto3";


option go_package="https://github.com/NAVANEESHKM/ecommerce_order";
package order_proto;


message GetOrderRequest{
    int32 CustomerId=1;
}

message GetOrderResponse{
      
}